# TSL_RAG

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  ui.py
docker/: init.sql
evals/: judge.py  run_evals.py
evals/golden_dataset/: questions.py
src/tsl_rag/api/: app.py  main.py
src/tsl_rag/api/routers/: query.py
src/tsl_rag/core/: llm_client.py  models.py  settings.py
src/tsl_rag/generation/: generator.py
src/tsl_rag/ingestion/: cli.py
src/tsl_rag/ingestion/chunkers/: legal_chunker.py
src/tsl_rag/ingestion/embedders/: embedder.py
src/tsl_rag/ingestion/parsers/: legal_pdf_parser.py
src/tsl_rag/retrieval/: reranker.py  retriever.py
tests/unit/: test_chunker.py  test_embbeder.py  test_generator.py  test_retriever.py
